<resources>
    <string name="app_name">AppNhac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="play_list_today">Playlist đề xuất</string>
    <string name="view_more">Xem thêm</string>
    <string name="button_playlist">Button playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chudetheloai">CHỦ ĐỀ VÀ THỂ LOẠI</string>
    <string name="one">1</string>
    <string name="dummy_tenbaihat">Ten ca khuc</string>
    <string name="dummy_tencasi">Ca si</string>
    <string name="all_chude">Tất cả chủ đề</string>
    <string name="nhac_nhat_hot">Nhac Nhat Hot</string>
    <string name="various_artist">Various Artist</string>
    <string name="music">Music</string>
    <string name="no_song_data">Không có dữ liệu bài hát</string>
    <string name="welcome">Xin chào,</string>
    <string name="user_name">user_name</string>
    <string name="hint_username">Nhập username</string>
    <string name="hint_email">Nhập email</string>
    <string name="hint_password">Nhập password</string>
    <string name="register">Đăng ký</string>
</resources>