<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:id="@+id/loginCoordinator">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"

       android:orientation="vertical">
       <androidx.appcompat.widget.Toolbar
           android:id="@+id/logintoolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
           android:background="?attr/colorPrimary"
           android:elevation="4dp"
           android:theme="@style/ThemeOverlay.AppCompat.Dark"
           app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:textColor="#800080"
           android:gravity="center"
           android:textSize="24sp"
           android:textStyle="bold"
           android:elevation="3dp"
           android:layout_marginTop="50dp"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginEnd="25dp"
               android:layout_marginStart="25dp"
               android:hint="@string/hint_username"
               android:layout_marginTop="50dp"
               android:id="@+id/loginUsername"
               android:inputType="text"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="25dp"
               android:layout_marginEnd="25dp"
               android:hint="@string/hint_password"
               android:layout_marginTop="20dp"
               android:id="@+id/loginPassword"
               android:inputType="textPassword"/>
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"
               android:onClick="checkBoxClicked"
               android:text="Remember me"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="25dp"
               android:layout_marginEnd="25dp"
               android:layout_marginTop="30dp"
               android:id="@+id/buttonLogin"
               android:background="@color/design_default_color_primary"
               android:text="Đăng nhập"
               android:textColor="#FFFFFF"
               android:textSize="16sp"/>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="25dp"
               android:layout_marginEnd="25dp"
               android:layout_marginTop="30dp"
               android:id="@+id/buttonLogintoRegister"
               android:background="@color/design_default_color_primary"
               android:text="Chưa có tài khoản? Đăng ký."
               android:textColor="#FFFFFF"
               android:textSize="16sp"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center"
               android:id="@+id/show_progress"
               android:visibility="invisible">
               <ProgressBar
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="25dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Please Wait..."
                   android:gravity="center"
                   android:layout_marginTop="5dp"/>

           </LinearLayout>

       </LinearLayout>
   </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>